public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/30/source/compile
source.c: In function ‘main’:
source.c:9:21: error: expected ‘)’ before 'i'
  }else if (karakter 'i' || karakter=='I')
                     ^
